fix the css files to corespond to responsivnes on mobile devices

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,19 +4,39 @@
     margin-top:10%
 }
 
-.nav-pills nav-stacked{
-    list-style-type: none;
+.navbar{
+   position:absolute !important;
+   display:none !important
 }
 
 .nav-pills .nav-stacked{
    display:none
 }
 
+#hiddenInput{
+     position:relative;
+     z-index: 12;
+     width:40px;
+     height:30px;
+     visibility: hidden;
+   }
+
 .fa-stack{
-   height:0
+   height:0;
+   float:right;
+   margin-right:5%
 }
 
-.nav-pills>li>a {
+
+#sidebar-wrapper:hover .fa-stack{
+   float:left
+}
+
+.filterIcon{
+   display:none
+}
+
+.nav-pills>li>a{
     border-radius: 0;
  }
  
@@ -26,7 +46,13 @@
     background: rgb(255, 255, 255, 0.1);
 }
 
- #wrapper {
+.special-div{
+   color:#fff;
+   cursor:default;
+   background: rgba(255, 255, 255, 0.2);
+ }
+
+ #wrapper{
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -35,33 +61,26 @@
     overflow: hidden;
  }
  
- #sidebar-wrapper{
-     width:50px
- }
-
- #sidebar-wrapper:hover {
+ #sidebar-wrapper:hover{
     margin-left: -250px;
     padding-left:0px;
     overflow-y:scroll;
  }
 
+ #sidebar-wrapper:hover .random-button{
+   display:block
+ }
+
  #sidebar-wrapper:hover .nav-pills .nav-stacked{
     display:inherit
  }
-
- i:focus #sidebar-wrapper{
-    width:5%;
-    overflow:hidden
-}
-
- #sidebar-wrapper {
-    z-index: 1000;
+ #sidebar-wrapper{
+    z-index: 1;
     position: absolute;
     overflow: hidden;
     left: 250px;
     width: 0;
     height: 100%;
-    padding-left:190px;
     margin-left: -450px;
     background: #000;
     -webkit-transition: all 0.5s ease;
@@ -70,11 +89,11 @@
     transition: all 0.5s ease;
  }
  
- #wrapper.toggled #sidebar-wrapper {
+ #wrapper.toggled #sidebar-wrapper{
     width: 250px;
  }
  
- #page-content-wrapper {
+ #page-content-wrapper{
     position: absolute;
     padding: 15px;
     width: 100%;
@@ -90,16 +109,16 @@
  }
 
  
- #wrapper.toggled #page-content-wrapper {
+ #wrapper.toggled #page-content-wrapper{
     position: relative;
     margin-right: 0px;
  }
  
- .fixed-brand {
+ .fixed-brand{
     width: auto;
  }
  
- .sidebar-nav {
+ .sidebar-nav{
     position: absolute;
     top: 0;
     width: 250px;
@@ -109,31 +128,26 @@
     margin-top: 2px;
  }
  
- .sidebar-nav li {
+ .sidebar-nav li{
     text-indent: 15px;
     line-height: 30px;
  }
 
- .custom-switch {
+ .custom-switch{
     text-align: left;
  }
  
- .sidebar-nav li a {
+ .sidebar-nav li a{
     display: block;
     text-decoration: none;
     color: #999999;
  }
+
  .special-a:hover{
     color:#fff;
     border-left: none;
  }
 
- .special-a-2{
-   color:#fff;
-   cursor:default;
-   background: rgba(255, 255, 255, 0.2);
- }
- 
  .sidebar-nav li .special-a:hover{
     text-decoration: none;
     color: #fff;
@@ -164,14 +178,15 @@
  }
 
  .random-button{
-   display:block;
+   display:none;
    width: 80%;
    padding-left:10%;
    margin-left:10%;
    margin-right: auto;
-   border: none;
+   border: 1px solid rgb(87, 83, 83);
    border-radius: 5px;
-   background-color:rgba(175, 170, 170, 0.9)
+   color:#fff;
+   background:rgba(255, 255, 255, 0.2)
 }
 
 .random-button:hover{
@@ -212,10 +227,10 @@
     color:#fff
  }
  
- @media(min-width:768px) {
-    #wrapper {
+ @media(min-width:870px) {
+    /* #wrapper {
        padding-left: 250px;
-    }
+    } */
 
     .fixed-brand {
        width: 250px;
@@ -228,7 +243,7 @@
     #sidebar-wrapper {
        width: 250px;
     }
-
+/* 
     #wrapper.toggled #sidebar-wrapper {
        width: 250px;
     }
@@ -239,7 +254,7 @@
 
     #wrapper.toggled-2 #sidebar-wrapper:hover {
        width: 250px;
-    }
+    } */
 
     #page-content-wrapper {
        padding: 20px;
@@ -266,4 +281,125 @@
        transition: all 0.5s ease;
        width: auto;
     }
+ }
+
+ @media only screen and (max-width: 870px){
+   .navbar{
+      display:flex !important;
+      width:120px;
+      padding-left:0px
+   } 
+
+   .ToBe{
+     position:absolute;
+     top: 95vh;
+     left: 50vw;
+     margin-left:auto;
+     margin-right: auto;
+     padding-top: 10px;
+     transform: translate(-50%, -50%);
+     z-index:3;
+     background:rgba(46, 44, 44, 0.911);
+     width: 100px;
+     height: 60px;
+     border-top-left-radius: 70px;
+     border-top-right-radius: 70px;
+     border: none;
+     border-bottom: 0;
+   }
+ 
+   .ToBe::after,
+   .ToBe::before,
+   .ToBe div{
+     background-color: rgb(237, 240, 235);
+     border-radius: 3px;
+     content:'';
+     display:block;
+     height:5px;
+     width:30px;
+     margin: 7px auto;
+     transition: .5s ease-in-out;
+   }
+ 
+   #hiddenInput:checked + .ToBe::before{
+      transform: translateY(12px) rotate(-130deg)
+   }
+
+   #hiddenInput:checked + .ToBe::after{
+     transform: translateY(-12px) rotate(130deg)
+   }
+
+   #hiddenInput:checked + .ToBe div{
+     transform: scale(0) translateX(-200px) rotate(360deg);
+     transition: 1.3s ease-out
+   }
+
+   #sidebar-wrapper{
+     z-index: 1;
+     position: absolute;
+     overflow: scroll;
+     display: flex;
+     justify-content: center;
+     width: 100vw;
+     left:0;
+     margin-left:0px;
+     background: #000;
+     -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+     -o-transition: all 0.5s ease;
+     transition: all 0.5s ease;
+   } 
+
+  .fa-stack{
+      float:left
+   }
+
+   #menu{
+      max-height:85%;
+      overflow-y: scroll;
+   }
+
+   .apply-button{
+      margin-left:auto;
+      margin-right:auto
+   }
+
+   .openNav{
+      display:flex !important;
+   }
+
+   .closeNav{
+      display:none !important;
+   }
+
+   #sidebar-wrapper:hover {
+      margin-left: 0px;
+      overflow-y:scroll;
+   } 
+
+   .nav-pills .nav-stacked{
+      display: block;
+      margin:0px;
+      padding:0px
+   }
+
+   .random-button{
+      display: block;
+   }
+ }
+
+ @media only screen and (max-width: 400px){
+   #sidebar-wrapper{
+      padding-left:0px;
+      display: flex;
+      justify-content: center;
+   }
+
+   #sidebar-wrapper:hover{
+      padding-left: 0px;
+   }
+
+   #menu{
+      max-height: 90vh;
+   }
  }
